--- a/Covid19Project/Webpage/Homepage.html
+++ b/Covid19Project/Webpage/Homepage.html
@@ -5,18 +5,21 @@
     <title>Covid-19 Hospital & Population Analytics</title>
     <link rel="stylesheet" href = "Style.css">
     <script src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
-    <script src="Testpage.js">  </script>
+    <script src="Button.js">  </script>
 </head>
-<body onload = "initViz();">
-    <div class = "container">
+<body onload = "initViz();" class ="">
+    <div class = "container">   
         <div class = "menu">
-            <ul>
+            <ul>            
                 <li class="logo"><img src = "hospital.png"></li>
                 <li>US Hospital Capacity by County</li>
             </ul>
-            <button class="btn left">Beds Needed</button>
-            <button class="btn right">At Risk Population</button>
-            <txt class ="descrip">*At risk population is defined by individuals over the age of 55.</txt>
+            <button class="btn">Beds Needed</button>
+            <button class="btn">At Risk Population</button>
+            <div class = "line"></div>
+            <div class = "note">
+                <p>*At risk population is defined by individuals over the age of 55.</p>
+            </div>
         </div>
         <div class = "bannner">
             <div class = "description"> 
