Fixed bStyle to Style typo

--- a/Covid19Project/Webpage/Homepage.html
+++ b/Covid19Project/Webpage/Homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid-19 Hospital & Population Analytics</title>
-    <link rel="stylesheet" href = "bStyle.css">   
+    <link rel="stylesheet" href = "Style.css">   
     <script src="https://kit.fontawesome.com/4676a18556.js" crossorigin="anonymous"></script>
     <script src="Button.js">  </script>
 </head>
